--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'java'
-apply plugin: 'eclipse'
 
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
@@ -17,6 +16,6 @@ sourceSets {
 }
 
 dependencies {
-	compile group: 'org.apache.kafka', name: 'kafka_2.11', version: '0.11.0.1'
-	compile group: 'org.apache.kafka', name: 'kafka-streams', version: '0.11.0.1'
+    implementation 'org.apache.kafka:kafka_2.13:2.5.0'
+    implementation 'org.apache.kafka:kafka-streams:2.5.0'
 }
